# weather-api-calling-from-chatcompletion

./: compose.yaml
code/: Dockerfile  README.md  pyproject.toml
code/function_calling/: function calling & fastapi.ipynb  function_calling.ipynb
code/function_calling/.ipynb_checkpoints/: function calling & fastapi-checkpoint.ipynb  function_calling-checkpoint.ipynb
project/: Dockerfile  pyproject.toml
project/weather_forecast/: main.py
