[tool.poetry]
name = "weather-forecast"
version = "0.1.0"
description = ""
authors = ["Abdur Rehman Hashmi <hashmi6332gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.2"
psycopg = {extras = ["standard"], version = "^3.2.1"}
uvicorn = {extras = ["standard"], version = "^0.30.6"}
sqlmodel = "^0.0.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
